	PR c++/43024 	* name-lookup.h (current_binding_level): Check for null 	cp_function_chain.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156741 138bc75d-0d04-0410-961f-82ee72b054a4